--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
-set -g default-terminal "screen-256color"
-#set -g default-terminal xterm
+#set -g default-terminal "screen-256color"
+set -g default-terminal xterm
 # status bar
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
@@ -37,8 +37,8 @@ set -g status-interval 1
 set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
-set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+#set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+#set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -53,7 +53,8 @@ set -s escape-time 0
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
 # client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
+# TURN IT OFF FOR ITERM SUPPORT
+setw -g aggressive-resize off
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside 
 # another TMUX session
@@ -67,23 +68,36 @@ set -g visual-activity on
 #set-window-option -g window-status-current-bg red
 
 # Vi copypaste mode
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+#
+# Set tmux to Vi mode
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# Scroll up/down with j/k
+bind-key -T vi-copy 'j' page-up
+bind-key -T vi-copy 'k' page-down
 
 # hjkl pane traversal
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind d select-pane -R
-bind D select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key d select-pane -R
+bind-key D select-pane -R
+
+#resize panes:
+bind-key -r  H resize-pane -L 5
+bind-key -r  J resize-pane -D 5
+bind-key -r  K resize-pane -U 5
+bind-key -r  L resize-pane -R 5
+
 
 # reload config
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # auto window rename
 set-window-option -g automatic-rename
 
 # rm mouse mode fail
 set -g mode-mouse off
+ 
